# i2p-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
include/i2p/: context.h  crypto.h  i2p.h  io.h  ipc.h  memory.h  memory.hpp  netdb.h  util.h  uv.h
include/i2p/cryptoimpl/: openssl.h
include/i2p/datatypes/: certificate.h  ident_hash.h  identity.h  router_info.h
src/: i2prouter.c  i2prouter.cpp
src/context/: init.c  init.cpp
src/crypto/: crypto.c
src/crypto/openssl/: elgamal.c  init.c  util.c
src/datatypes/: certificate.cpp  router_info.c  router_info.cpp
src/memory/: alloc.c  buffer.cpp
src/netdb/: netdb.cpp
src/util/: util.c
test/: CMakeLists.txt
test/src/: test_crypto.c
